--- a/Editted files/myaccount.html
+++ b/Editted files/myaccount.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Navigation -->
     <div class="navbar">
-        <a href="/login.html">Logout</a>
+        <a href="/login.html" id="logout">Logout</a>
         <select id="chart-selector">
             <option value="avgBPM">Heart Rate (BPM)</option>
             <option value="spO2">Blood Oxygen (SpO2)</option>
