--- a/public/myaccount.html
+++ b/public/myaccount.html
@@ -41,6 +41,22 @@
                 <canvas id="weeklySummaryChart"></canvas>
             </div>
         </section>
+
+	    <!-- User Information Update Section -->
+        <section class="user-info">
+            <h2>Update Your Information</h2>
+            <form id="updateForm">
+                <label for="device">Device:</label>
+                <input type="text" id="device" name="device" placeholder="Enter your device">
+
+                <label for="password">New Password:</label>
+                <input type="password" id="password" name="password" placeholder="Enter new password">
+
+                <button type="submit">Update</button>
+            </form>
+            <p id="updateMessage" style="color: green;"></p>
+        </section>
+    </main>
     </main>
 
     <!-- Footer -->
