--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <div class="navbar">
         <div class="logo">Heart Rate Project</div>
         <a href="login.html">Login</a>
+        <a href="reference.html">Reference</a>
     </div>
 
     <!-- Hero Section -->
