--- a/public/login.html
+++ b/public/login.html
@@ -19,6 +19,13 @@
             <form id="login-form">
                 <input type="text" id="username" placeholder="Username" class="input-field" required>
                 <input type="password" id="password" placeholder="Password" class="input-field" required>
+
+                <!-- Show Password Checkbox -->
+                <div class="show-password">
+                    <input type="checkbox" id="show-password">
+                    <label for="show-password">Show Password</label>
+                </div>
+                
                 <button type="submit" class="btn login-btn">Login</button>
                 <button type="button" class="btn create-account-btn"
                     onclick="location.href='createaccount.html';">Create an Account</button>
